feature/finalize: migrate to RichTextFX editor, improve WhisperService logging, add tests and icon notes