@@ -1,30 +1,81 @@
 package com.example.officewrite;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.InputStreamReader;
-import java.nio.file.Paths;
+import java.io.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
+import java.text.SimpleDateFormat;
+import java.util.Date;
 
 public class WhisperService {
 
     // Update these paths if necessary or read from settings
-    private final String whisperBin = Paths.get("bin","main.exe").toString(); // place main.exe here
-    private final String modelPath = Paths.get("models","ggml-tiny.bin").toString();
+    private final String whisperBin = Path.of("bin","main.exe").toString(); // place main.exe here
+    private final String modelPath = Path.of("models","ggml-tiny.bin").toString();
 
     public String transcribe(File wavFile, String lang) {
+        String timestamp = new SimpleDateFormat("yyyyMMdd_HHmmss").format(new Date());
         try {
-            ProcessBuilder pb = new ProcessBuilder(whisperBin, "-m", modelPath, "-f", wavFile.getAbsolutePath());
-            pb.redirectErrorStream(true);
+            Files.createDirectories(Path.of("logs"));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        Path logFile = Path.of("logs","whisper_" + timestamp + ".log");
+        Path errFile = Path.of("logs","whisper_" + timestamp + ".err");
+
+        ProcessBuilder pb = new ProcessBuilder(whisperBin, "-m", modelPath, "-f", wavFile.getAbsolutePath());
+        pb.redirectErrorStream(false);
+        try {
             Process p = pb.start();
-            StringBuilder out = new StringBuilder();
-            try (BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()))) {
-                String line;
-                while ((line = br.readLine()) != null) out.append(line).append("\n");
-            }
+
+            // capture stdout
+            Thread outThread = new Thread(() -> {
+                try (BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));
+                     BufferedWriter bw = Files.newBufferedWriter(logFile, StandardOpenOption.CREATE, StandardOpenOption.APPEND)) {
+                    String line;
+                    while ((line = br.readLine()) != null) {
+                        bw.write(line);
+                        bw.newLine();
+                    }
+                } catch (IOException ex) { ex.printStackTrace(); }
+            }, "whisper-stdout");
+            outThread.start();
+
+            // capture stderr
+            Thread errThread = new Thread(() -> {
+                try (BufferedReader br = new BufferedReader(new InputStreamReader(p.getErrorStream()));
+                     BufferedWriter bw = Files.newBufferedWriter(errFile, StandardOpenOption.CREATE, StandardOpenOption.APPEND)) {
+                    String line;
+                    while ((line = br.readLine()) != null) {
+                        bw.write(line);
+                        bw.newLine();
+                    }
+                } catch (IOException ex) { ex.printStackTrace(); }
+            }, "whisper-stderr");
+            errThread.start();
+
             p.waitFor();
-            return out.toString().trim();
+            outThread.join(1000);
+            errThread.join(1000);
+
+            // Read log file and return content
+            StringBuilder out = new StringBuilder();
+            if (Files.exists(logFile)) {
+                try (BufferedReader br = Files.newBufferedReader(logFile)) {
+                    String line;
+                    while ((line = br.readLine()) != null) out.append(line).append("\n");
+                }
+            }
+
+            String result = out.toString().trim();
+            // basic cleanup: remove progress/status lines if any (simple heuristic)
+            result = result.replaceAll("(?m)^\[[^]]*\]$", "").trim();
+            return result;
         } catch (Exception e) {
             e.printStackTrace();
+            try {
+                Files.writeString(errFile, e.toString(), StandardOpenOption.CREATE, StandardOpenOption.APPEND);
+            } catch (IOException ex) { ex.printStackTrace(); }
             return "";
         }
     }
